fix text align

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -59,7 +59,7 @@
   padding: 0.25rem;
   display: flex;
   flex-direction: column;
-  text-align: center;
+  /* text-align: center; */
   /* margin-bottom: 3rem; */
 }
 
